# SimpleSignalSystem

./: CMakeLists.txt  README.md  main.cpp
TestFiles/: Button.cpp  Button.h  Dialog.cpp  Dialog.h
metaSystems/: MetaObject.cpp  MetaObject.h  Signal.cpp  Signal.h
